# task-tracker

./: README.md  docker-compose.yml
auth/: docker-entrypoint.sh  pyproject.toml
auth/app/: deps.py  events.py  main.py  routers.py  schemas.py  security.py  server.py  services.py
auth/app/api/: deps.py  routers.py  schemas.py
auth/app/api/templates/: base.html  login.html  register.html  users.html  users_me.html
auth/app/db/: models.py  repositories.py  session.py
auth/app/events/: base.py  user.py
auth/app/settings/: .env.example  config.py  logger.py
event_schemas/task/assigned/: 1.json
event_schemas/task/completed/: 1.json
event_schemas/task/created/: 1.json
event_schemas/task/updated/: 1.json
event_schemas/user/updated/: 1.json
schema_registry/: loader.py  validator.py
task_tracker/: pyproject.toml
tracker/: Dockerfile  docker-entrypoint.sh  pyproject.toml
tracker/app/: consumer.py  events.py  server.py
tracker/app/api/: deps.py  routers.py  schemas.py
tracker/app/api/templates/: base.html  login.html  tasks.html  tasks_my.html
tracker/app/db/: models.py  repositories.py  session.py
tracker/app/events/: base.py  task.py  user.py
tracker/app/settings/: .env.example  config.py  logger.py
