[tool.poetry]
name = "task_tracker"
version = "0.1.0"
description = "task tracker service"
authors = ["Dmitry Nikolaev <etsu.nikolaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
